Added support for reading Touch Messages.  Added additional LED BIT Decoding.

--- a/LAD_test/CMakeLists.txt
+++ b/LAD_test/CMakeLists.txt
@@ -4,6 +4,7 @@ add_executable(LAD_test
         led.c
         bit.c
         lcd.c
+        touch.c
         )
 
 # pull in common dependencies and additional i2c hardware support
