--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,10 +36,10 @@ add_subdirectory(adc)
 add_subdirectory(clocks)
 add_subdirectory(cmake)
 add_subdirectory(divider)
-add_subdirectory(dma)
+#add_subdirectory(dma)
 add_subdirectory(flash)
 add_subdirectory(gpio)
-add_subdirectory(i2c)
+#add_subdirectory(i2c)
 add_subdirectory(interp)
 add_subdirectory(multicore)
 add_subdirectory(picoboard)
@@ -52,6 +52,6 @@ add_subdirectory(spi)
 add_subdirectory(system)
 add_subdirectory(timer)
 add_subdirectory(uart)
-add_subdirectory(usb)
+#add_subdirectory(usb)
 add_subdirectory(watchdog)
 add_subdirectory(LAD_test)
