--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,3 +96,4 @@ add_subdirectory(watchdog)
 add_subdirectory(sha)
 add_subdirectory(freertos)
 add_subdirectory(LAD_test)
+add_subdirectory(MFD_test)
